# MIRCO

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  MyCMakePresets.json  README.md  TestingFramework.cmake  create-mirco-python-venv.sh
.github/workflows/: build-test.yml
Input/: input_MASTER.yaml  input_sup6.yaml  input_sup7.xml  input_sup7.yaml  input_sup7_exportVis.yaml  input_sup8.xml  input_sup9.yaml  input_supN6.yaml
dependencies/kokkos/: install.sh
dependencies/kokkos-kernels/: install.sh
doc/: MIRCO_Tutorial.tex
docker/dependencies/: Dockerfile  compute_dependencies_hash.sh
src/: main.cpp  mainFlat.cpp  main_argsAndTimers.cpp  main_flat.cpp  mirco_contactpredictors.cpp  mirco_contactstatus.cpp  mirco_data_shapefactors.cpp  mirco_evaluate.cpp  mirco_evaluate.h  mirco_exportvisualization.cpp  mirco_exportvisualization.h  mirco_inputparameters.cpp  mirco_inputparameters.h  mirco_inputparameters_yaml.cpp  mirco_kokkostypes.h  mirco_linearsolver.cpp  mirco_matrixsetup.cpp  mirco_matrixsetup.h  mirco_nonlinearsolver.cpp  mirco_nonlinearsolver.h  mirco_nonlinearsolver_kokkos_float.cpp  mirco_nonlinearsolver_kokkos_float.h  mirco_returnstructure.h  mirco_setparameters.cpp  mirco_shapefactors.cpp  mirco_shapefactors.h  mirco_topology.cpp  mirco_topology.h  mirco_topologyutilities.cpp  mirco_topologyutilities.h  mirco_utils.cpp  mirco_utils.h  mirco_utilsIO.cpp  mirco_utilsIO.h  mirco_visualizationexport.cpp  mirco_visualizationexport.h  mirco_warmstart.cpp
tests/unittests/: test.cpp
utilities/mirco-python-venv/: pyvenv.cfg
